crates/jrsonnet-evaluator/src/snapshots/jrsonnet_evaluator__analyze__tests__snapshots@object_comp.jsonnet.snap
---
source: crates/jrsonnet-evaluator/src/analyze.rs
expression: rendered
input_file: crates/jrsonnet-evaluator/src/analysis_tests/object_comp.jsonnet
---
--- source ---
{ [k]: k for k in ['a', 'b'] }
--- root analysis ---
object_dependent_depth: none
local_dependent_depth: 0
errored: false
--- diagnostics ---
--- lir ---
Obj(
    ObjComp(
        LObjComp {
            frame_shape: ClosureShape {
                captures: [
                    Local(
                        LocalSlot(
                            0,
                        ),
                    ),
                ],
                n_locals: 1,
            },
            this: None,
            set_dollar: false,
            uses_super: false,
            locals: [],
            field: LFieldMember {
                name: Dyn(
                    Slot(
                        Local(
                            LocalSlot(
                                0,
                            ),
                        ),
                    ),
                ),
                plus: false,
                visibility: Normal,
                value: (
                    ClosureShape {
                        captures: [
                            Capture(
                                CaptureSlot(
                                    0,
                                ),
                            ),
                        ],
                        n_locals: 0,
                    },
                    Slot(
                        Capture(
                            CaptureSlot(
                                0,
                            ),
                        ),
                    ),
                ),
            },
            compspecs: [
                For {
                    frame_shape: ClosureShape {
                        captures: [],
                        n_locals: 1,
                    },
                    destruct: Full(
                        LocalSlot(
                            0,
                        ),
                    ),
                    over: Arr {
                        shape: ClosureShape {
                            captures: [],
                            n_locals: 0,
                        },
                        items: [
                            Str(
                                "a",
                            ),
                            Str(
                                "b",
                            ),
                        ],
                    },
                    loop_invariant: true,
                },
            ],
        },
    ),
)
