crates/jrsonnet-evaluator/src/snapshots/jrsonnet_evaluator__analyze__tests__snapshots@object_dollar.jsonnet.snap
---
source: crates/jrsonnet-evaluator/src/analyze.rs
expression: rendered
input_file: crates/jrsonnet-evaluator/src/analysis_tests/object_dollar.jsonnet
---
--- source ---
{ a: 1, b: { c: $.a } }
--- root analysis ---
object_dependent_depth: 0
local_dependent_depth: 0
errored: false
--- diagnostics ---
--- lir ---
Obj(
    MemberList(
        LObjMembers {
            frame_shape: ClosureShape {
                captures: [],
                n_locals: 1,
            },
            this: Some(
                LocalSlot(
                    0,
                ),
            ),
            set_dollar: true,
            uses_super: false,
            locals: [],
            asserts: None,
            fields: [
                LFieldMember {
                    name: Fixed(
                        "a",
                    ),
                    plus: false,
                    visibility: Normal,
                    value: (
                        ClosureShape {
                            captures: [],
                            n_locals: 0,
                        },
                        Num(
                            1.0,
                        ),
                    ),
                },
                LFieldMember {
                    name: Fixed(
                        "b",
                    ),
                    plus: false,
                    visibility: Normal,
                    value: (
                        ClosureShape {
                            captures: [],
                            n_locals: 0,
                        },
                        Obj(
                            MemberList(
                                LObjMembers {
                                    frame_shape: ClosureShape {
                                        captures: [
                                            Local(
                                                LocalSlot(
                                                    0,
                                                ),
                                            ),
                                        ],
                                        n_locals: 1,
                                    },
                                    this: None,
                                    set_dollar: false,
                                    uses_super: false,
                                    locals: [],
                                    asserts: None,
                                    fields: [
                                        LFieldMember {
                                            name: Fixed(
                                                "c",
                                            ),
                                            plus: false,
                                            visibility: Normal,
                                            value: (
                                                ClosureShape {
                                                    captures: [
                                                        Capture(
                                                            CaptureSlot(
                                                                0,
                                                            ),
                                                        ),
                                                    ],
                                                    n_locals: 0,
                                                },
                                                Index {
                                                    indexable: Slot(
                                                        Capture(
                                                            CaptureSlot(
                                                                0,
                                                            ),
                                                        ),
                                                    ),
                                                    parts: [
                                                        LIndexPart {
                                                            span: virtual:<test>:18-19,
                                                            value: Str(
                                                                "a",
                                                            ),
                                                        },
                                                    ],
                                                },
                                            ),
                                        },
                                    ],
                                },
                            ),
                        ),
                    ),
                },
            ],
        },
    ),
)
