crates/jrsonnet-evaluator/src/snapshots/jrsonnet_evaluator__analyze__tests__snapshots@object_self.jsonnet.snap
---
source: crates/jrsonnet-evaluator/src/analyze.rs
expression: rendered
input_file: crates/jrsonnet-evaluator/src/analysis_tests/object_self.jsonnet
---
--- source ---
{ a: 1, b: self.a }
--- root analysis ---
object_dependent_depth: 0
local_dependent_depth: 0
errored: false
--- diagnostics ---
--- lir ---
Obj(
    MemberList(
        LObjMembers {
            frame_shape: ClosureShape {
                captures: [],
                n_locals: 1,
            },
            this: Some(
                LocalSlot(
                    0,
                ),
            ),
            set_dollar: false,
            uses_super: false,
            locals: [],
            asserts: None,
            fields: [
                LFieldMember {
                    name: Fixed(
                        "a",
                    ),
                    plus: false,
                    visibility: Normal,
                    value: (
                        ClosureShape {
                            captures: [],
                            n_locals: 0,
                        },
                        Num(
                            1.0,
                        ),
                    ),
                },
                LFieldMember {
                    name: Fixed(
                        "b",
                    ),
                    plus: false,
                    visibility: Normal,
                    value: (
                        ClosureShape {
                            captures: [],
                            n_locals: 0,
                        },
                        Index {
                            indexable: Slot(
                                Local(
                                    LocalSlot(
                                        0,
                                    ),
                                ),
                            ),
                            parts: [
                                LIndexPart {
                                    span: virtual:<test>:16-17,
                                    value: Str(
                                        "a",
                                    ),
                                },
                            ],
                        },
                    ),
                },
            ],
        },
    ),
)
