crates/jrsonnet-evaluator/src/snapshots/jrsonnet_evaluator__analyze__tests__snapshots@object_with_locals.jsonnet.snap
---
source: crates/jrsonnet-evaluator/src/analyze.rs
expression: rendered
input_file: crates/jrsonnet-evaluator/src/analysis_tests/object_with_locals.jsonnet
---
--- source ---
{
  local helper = 10,
  a: helper,
  b: helper * 2,
}
--- root analysis ---
object_dependent_depth: none
local_dependent_depth: 0
errored: false
--- diagnostics ---
--- lir ---
Obj(
    MemberList(
        LObjMembers {
            frame_shape: ClosureShape {
                captures: [],
                n_locals: 2,
            },
            this: None,
            set_dollar: false,
            uses_super: false,
            locals: [
                LBind {
                    destruct: Full(
                        LocalSlot(
                            1,
                        ),
                    ),
                    value_shape: ClosureShape {
                        captures: [],
                        n_locals: 0,
                    },
                    value: Num(
                        10.0,
                    ),
                },
            ],
            asserts: None,
            fields: [
                LFieldMember {
                    name: Fixed(
                        "a",
                    ),
                    plus: false,
                    visibility: Normal,
                    value: (
                        ClosureShape {
                            captures: [],
                            n_locals: 0,
                        },
                        Slot(
                            Local(
                                LocalSlot(
                                    1,
                                ),
                            ),
                        ),
                    ),
                },
                LFieldMember {
                    name: Fixed(
                        "b",
                    ),
                    plus: false,
                    visibility: Normal,
                    value: (
                        ClosureShape {
                            captures: [],
                            n_locals: 0,
                        },
                        BinaryOp {
                            lhs: Slot(
                                Local(
                                    LocalSlot(
                                        1,
                                    ),
                                ),
                            ),
                            op: Mul,
                            rhs: Num(
                                2.0,
                            ),
                        },
                    ),
                },
            ],
        },
    ),
)
