crates/jrsonnet-evaluator/src/snapshots/jrsonnet_evaluator__analyze__tests__snapshots@simple_local.jsonnet.snap
---
source: crates/jrsonnet-evaluator/src/analyze.rs
expression: rendered
input_file: crates/jrsonnet-evaluator/src/analysis_tests/simple_local.jsonnet
---
--- source ---
local x = 1; x + 2
--- root analysis ---
object_dependent_depth: none
local_dependent_depth: 0
errored: false
--- diagnostics ---
--- lir ---
LocalExpr(
    LLocalExpr {
        frame_shape: ClosureShape {
            captures: [],
            n_locals: 1,
        },
        binds: [
            LBind {
                destruct: Full(
                    LocalSlot(
                        0,
                    ),
                ),
                value_shape: ClosureShape {
                    captures: [],
                    n_locals: 0,
                },
                value: Num(
                    1.0,
                ),
            },
        ],
        body: BinaryOp {
            lhs: Slot(
                Local(
                    LocalSlot(
                        0,
                    ),
                ),
            ),
            op: Add,
            rhs: Num(
                2.0,
            ),
        },
    },
)
