crates/jrsonnet-evaluator/src/snapshots/jrsonnet_evaluator__analyze__tests__snapshots@super_usage.jsonnet.snap
---
source: crates/jrsonnet-evaluator/src/analyze.rs
expression: rendered
input_file: crates/jrsonnet-evaluator/src/analysis_tests/super_usage.jsonnet
---
--- source ---
{ a: 1, b: 2 } + { a: super.a + 10, c: self.b }
--- root analysis ---
object_dependent_depth: 0
local_dependent_depth: 0
errored: false
--- diagnostics ---
--- lir ---
BinaryOp {
    lhs: Obj(
        MemberList(
            LObjMembers {
                frame_shape: ClosureShape {
                    captures: [],
                    n_locals: 1,
                },
                this: None,
                set_dollar: false,
                uses_super: false,
                locals: [],
                asserts: None,
                fields: [
                    LFieldMember {
                        name: Fixed(
                            "a",
                        ),
                        plus: false,
                        visibility: Normal,
                        value: (
                            ClosureShape {
                                captures: [],
                                n_locals: 0,
                            },
                            Num(
                                1.0,
                            ),
                        ),
                    },
                    LFieldMember {
                        name: Fixed(
                            "b",
                        ),
                        plus: false,
                        visibility: Normal,
                        value: (
                            ClosureShape {
                                captures: [],
                                n_locals: 0,
                            },
                            Num(
                                2.0,
                            ),
                        ),
                    },
                ],
            },
        ),
    ),
    op: Add,
    rhs: Obj(
        MemberList(
            LObjMembers {
                frame_shape: ClosureShape {
                    captures: [],
                    n_locals: 1,
                },
                this: Some(
                    LocalSlot(
                        0,
                    ),
                ),
                set_dollar: false,
                uses_super: true,
                locals: [],
                asserts: None,
                fields: [
                    LFieldMember {
                        name: Fixed(
                            "a",
                        ),
                        plus: false,
                        visibility: Normal,
                        value: (
                            ClosureShape {
                                captures: [],
                                n_locals: 0,
                            },
                            BinaryOp {
                                lhs: Index {
                                    indexable: Super,
                                    parts: [
                                        LIndexPart {
                                            span: virtual:<test>:28-29,
                                            value: Str(
                                                "a",
                                            ),
                                        },
                                    ],
                                },
                                op: Add,
                                rhs: Num(
                                    10.0,
                                ),
                            },
                        ),
                    },
                    LFieldMember {
                        name: Fixed(
                            "c",
                        ),
                        plus: false,
                        visibility: Normal,
                        value: (
                            ClosureShape {
                                captures: [],
                                n_locals: 0,
                            },
                            Index {
                                indexable: Slot(
                                    Local(
                                        LocalSlot(
                                            0,
                                        ),
                                    ),
                                ),
                                parts: [
                                    LIndexPart {
                                        span: virtual:<test>:44-45,
                                        value: Str(
                                            "b",
                                        ),
                                    },
                                ],
                            },
                        ),
                    },
                ],
            },
        ),
    ),
}
